fix z-index for contact page

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -260,6 +260,10 @@ only screen and (max-width: 760px),
     margin-top: 0;
   }
 
+    nav{
+      z-index: 10;
+    }
+
 	table {
     border: 0;
   }
